...
        android:background="@android:drawable/edit_text"
        android:fadingEdge="horizontal|vertical|none"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profilePass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profiles"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/Enter"
        android:layout_width="141dp"
        android:layout_height="75dp"
        android:layout_marginStart="396dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/btn_default"
...
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/addProfile"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@android:drawable/btn_default"
        android:backgroundTint="@color/test"
...
        app:layout_constraintEnd_toEndOf="@+id/profiles"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="@+id/profiles"
        app:layout_constraintTop_toBottomOf="@+id/profiles" />

    <Button
        android:id="@+id/deleteProfile"
        android:layout_width="197dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="104dp"
        android:background="@android:drawable/btn_default"
...
