...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="197dp"
        android:layout_height="101dp"
        android:layout_marginBottom="256dp"
        android:background="@android:drawable/btn_default_small"
        android:backgroundTint="@color/test"
        android:text="@string/register"
...
        android:text="@string/enter_password"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="535dp"
        android:layout_height="85dp"
        android:layout_marginTop="48dp"
...
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="527dp"
        android:layout_height="84dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Passwoord"
...
